--- a/project head.css
+++ b/project head.css
@@ -2,84 +2,97 @@
     margin:0;
     padding:0;
     box-sizing:border-box;
+    text-transform:capitalize;
 }
-.imgset{
-    width:20px;
-    height:20px;
-    margin:0 1rem 0 0.6rem;
+header .top,.bottom{
+    display:flex;
+    justify-content:space-between;
    
+    align-items:center;
 }
-.flex1{
-    display:flex;
-    justify-content:space-between;
-    background-color:rgb(161, 83, 235);
+.top{
+    background-color:#000442;
+    padding:0 5rem 0 7rem;
     height:2.5rem;
-    padding:0.5rem;
-    align-items:center;
-}
-.margin{
-    margin:0rem 9rem 0;
-}
-span{
     color:#fff;
-}
-.imgset1{
-    width:100px;
-    height:50px;
-}
-.background{
-    background-color:rgba(100%, 100%, 100%,1);
-    height:3rem;
-}
-.flex2{
-    display:flex;
-    justify-content:space-between;
-    padding:1rem;
-    height:4rem;
-    align-items:center;
 }
 ul{
-    display:flex;
     list-style-type:none;
-    
-    
-    
-    
+    display:flex;
 }
-li a{
-   text-decoration:none;
-   margin:1rem;
-   color:#595555;
-   font-weight:lighter;
-   font-size:20px;
+ a{
+    text-decoration:none;
+    margin:0 1.5rem;
+    color:rgba(0,0,0,0.7);
+    font-size:large;
 }
-.mainmenu li{
-    position:relative;
+.bottom img{
+     width:11rem;
+     height:5rem;
 }
-.submenu{
-    position:absolute;
-    top:34px;
-    left:0px;
-    display:none;
-    padding:1.3rem;
-    width:220px;
-    background-color:green;
-    
-    
-}
-.submenu li a{
-    border-bottom:2px solid #fff;
+
+header .top a{
     color:#fff;
-    width:100%;
-    display:block;
+}
+.bottom{
+    margin:1rem 5rem 0;
+}
+.box{
+    
+    color:#fff;
+    width:50px;
+    height:40px;
+    padding:1rem;
+    margin:10rem  0rem 0;
+   
+}
+.box1
+{
+    background-color:green;
+}
+.box2{
+    border:2px solid;
+    
     
 }
-.mainmenu li:hover .submenu{
-    display:block;
-    background-color:rgb(60, 82, 60);
+#hero{
+    position:relative;
+    display:flex;
+    justify-content:space-between;
+    background-image:url(Homes_Photo_dev_hero-3.jpg);
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-attachment: fixed;
+    background-position:center;
+    height:82vh;
+    
+}
+#hero::before{
+    content:" ";
+    position:absolute;
+    left:0;
+    top:0;
+    width:100%;
+    height:100%;
+    background-color:black;
+    opacity:0.55;
 
 }
-.mainmenu li a:hover{
-    
-    border-bottom:2px solid green;
+p{
+    margin:1rem 0 2rem 0;
+}
+i{
+    margin:0 0.75rem 0 0;
+}
+.upercase{
+     position:relative;
+    margin:7rem 6rem 0 6rem;
+    color:#ffffff;
+}
+.upercase h1{
+    font-size:60px;
+    width:40rem;
+    margin-bottom:1rem;
+    line-height:3rem;
+   
 }
