--- a/project head.css
+++ b/project head.css
@@ -7,7 +7,7 @@
 }
 
 header .top,
-.bottom {
+.bottom,.flex1 {
     display: flex;
     justify-content: space-between;
 
@@ -109,8 +109,7 @@ header .top a {
 
 #hero {
     position: relative;
-    display: flex;
-    justify-content: space-between;
+    
     background-image: url(Homes_Photo_dev_hero-3.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -213,6 +212,8 @@ i {
     width:100%;
     height:500px;
     background-color:rgba(105, 215, 179,0.1);
+}
+.page3set,.ninebox,#hero{
     display: flex;
     justify-content: space-between;
 }
@@ -266,4 +267,133 @@ h4:first-child{
     background-color:green;
     color:#fff;
     margin-top:1rem;
+}
+.thbox{
+    border:0.5px solid #615d5d;
+    width:400px;
+    height:550px;
+    text-align:center;
+    text-align-last: center;;
+    padding:2rem;
+}
+.setimg{
+    width:170px;
+    height:50px;
+    margin:0.1rem 156px 0.3rem 79px ;
+    
+    
+    
+}
+.margin{
+    width:114px;
+    
+    margin-bottom:1rem;
+}
+.thbox h1{
+    font-weight:400;
+    word-spacing: 5px;
+    margin:0.4rem 0;
+    font-size:21px;
+}
+.thbox h3{
+    font-weight:lighter;
+    word-spacing: 5px;
+    margin-bottom:1.5rem;
+    font-size:18px;
+}
+.thbox p{
+    font-size:19px;
+    word-spacing:10px;
+    font-weight:lighter;
+    color:#362f2f;
+}
+.threebox{
+    display:flex;
+    justify-content:space-between;
+    margin:3rem 7.5rem;
+}
+.size1{
+    font-size:43px;
+    text-align:center;
+    margin:4rem 0 0 16rem;
+    width:71%;
+
+}
+.backcolor{
+    background-color:rgba(0,0,0,0.1);
+    width:100%;
+}
+.imgset1{
+    width:350px;
+    height:230px;
+    margin:0.5rem 0.5rem;
+    
+    z-index:2;
+} 
+.setback{
+     border:1px solid #9f9d9d;
+     background-color:#fff;
+     width:370px;
+     height:500px;
+    margin-bottom:4rem;
+}
+.setback div{
+    text-align:center;
+    word-spacing:0.7rem;
+    padding:0.5rem;
+}
+.setback a{
+    text-align:center;
+    background-color:green;
+    color:#fff;
+    padding:1rem;
+    display:block;
+    font-size:20px;
+}
+.ninebox{
+   
+    width:100%;
+    flex-wrap:wrap;
+    align-items:center;
+    padding:7rem;
+}
+.backcolor h1{
+    text-align:center;
+    margin-top:-2rem;
+    padding-top:7rem;
+    font-size:50px;
+    font-weight:bolder;
+}
+.small{
+    height:100px;
+    width:130px;
+
+}
+.width2{
+    width:30%;
+}
+
+.flex1{
+    
+    margin:4rem 1rem 4rem 2rem;
+}
+.flex1 a{
+    display:flex;
+}
+.width1{
+    font-size:40px;
+    width:30%;
+    
+}
+.width{
+    width:84%;
+    line-height:2rem;
+    margin-bottom:2rem;
+    color:#5b5252;
+    font-weight:lighter;
+}
+.imgwidth{
+    width:45%;
+    display:flex;
+    flex-wrap:wrap;
 }
