--- a/project head.css
+++ b/project head.css
@@ -133,7 +133,7 @@ header .top a {
 }
 
 p {
-    margin: 1rem 0 3rem 0;
+    margin: 3rem 0 3rem 0;
 }
 
 i {
@@ -365,12 +365,14 @@ h4:first-child{
     font-weight:bolder;
 }
 .small{
-    height:100px;
-    width:130px;
+    height: 106px;
+    width: 176px;
+    margin: 1rem 2rem 6rem 1.5rem;
+  }
 
-}
 .width2{
     width:30%;
+    margin-left:3rem;
 }
 
 .flex1{
@@ -393,7 +395,230 @@ h4:first-child{
     font-weight:lighter;
 }
 .imgwidth{
-    width:45%;
-    display:flex;
-    flex-wrap:wrap;
+    width: 52%;
+display: flex;
+flex-wrap: wrap;
+margin-right: 7rem;
 }
+.center1{
+    margin-bottom:5rem;
+}
+.center{
+    text-align:center;
+    margin-bottom:1.5rem;
+    font-size:30px;
+}
+.tb{
+    border:1px solid;
+    width:600px;
+    height:50px;
+    padding:1rem;
+    margin-left:28rem;
+    background-color:#c1c2c9;
+    font-weight:lighter;
+}
+.lastimg img{
+    width:100%;
+    height:300px;
+    
+    
+    
+    
+   
+}
+.lastimg{
+    position:relative;
+    background-image:url(https://roofingbymccanns.com/wp-content/uploads/2022/05/Homes_Photo_dev_hero-2.jpg);
+    background-position:center;
+    background-repeat:no-repeat;
+    background-attachment: fixed;
+    background-size:cover;
+    height:300px;
+   
+   
+}
+.lastimg::before{
+    content:' ';
+    position:absolute;
+    left:0;
+    top:0;
+    width:100%;
+    height:100%;
+    background-color:rgba(7, 57, 7, 0.8);
+    
+   
+}
+.lastimg{
+    display:flex;
+   
+
+}
+.limg1{
+    margin:6rem 2rem 0 6rem;
+    width:50%;
+    color:#fff;
+    z-index:1;
+    
+}
+.limg1 h1{
+    font-size:40px;
+}
+.limg2{
+    margin:8rem 2rem 0 2rem;
+    width:50%;
+    z-index:2;
+   
+    
+}
+.limg2 a{
+    
+   
+    font-weight:lighter;
+    border:2px solid;
+    width:250px;
+    height:40px;
+    display:inline-block;
+    padding:0.44rem;
+   
+    
+    
+}
+.limg22 i{
+    margin-left:0.6rem;
+   
+}
+.limg21{
+    background-color:#fff;
+    font-size:22px;
+}
+.limg22{
+   color:#fff;
+   
+}
+.limg22:hover {
+    background-color:#000442;
+}
+.limg21:hover{
+    background-color:green;
+}
+.wrapper1{
+    background-color: #000442;
+    
+}
+.address{
+    padding:5rem 4rem;
+    display:flex;
+    /* justify-content:space-between; */
+    width:100%;
+}
+.address1 p{
+    text-align:justify;
+    margin:3rem 0 3rem 1.5rem;
+}
+
+.address1,.address2{
+    color:#fff;
+    border-right:1px solid;
+    padding:0 1rem 0 0;
+    width:30%;
+   
+}
+.img1{
+    width:400px;
+    height:200px;
+    padding:0 1rem 0 0;
+}
+.img2{
+    width:172px;
+    height:160px;
+}
+.address2 a{
+    color:#fff;
+    display: block;
+    margin-bottom: 1.5rem;
+    
+    
+}
+.address2 ul{
+    display:flex;
+    display:block;
+    justify-content:space-between;
+   
+}
+.address2 h3{
+    font-size:25px;
+    margin-left:1.5rem;
+    margin-bottom:1.5rem;
+   
+
+}
+#i{
+    margin:2rem 0 1rem 2rem;
+  display:flex;
+}
+#i i{
+    font-size:30px;
+    margin-left:0.2rem;
+    background-color:rgb(15, 159, 216);
+}
+.design{
+    border:10px solid double #fff;
+    width:250px;
+    height:50px;
+}
+.box8{
+    border:2px double #fff;
+    width:277px;
+    height:60px;
+    margin:2rem 0 1rem 2rem; 
+}
+.box8 a{
+    border: 1px solid green;
+border-radius: 5px;
+width: 250px;
+height: 30px;
+margin: 0.9rem 1rem 1rem 0.7rem;
+background-color: #fff;
+color: green;
+text-shadow: 2px 2px 5px green;
+padding:0.3rem;
+font-weight:lighter;
+}
+span{
+    color:#000;
+    font-weight:lighter;
+}
+.addressd21{
+    margin:1rem 0 1rem 2rem;
+}
+.address21 h2{
+    margin:1rem 0 1rem 1.5rem;
+}
+.address3{
+    display:flex;
+    color: #fff;
+display: block;
+margin: 0rem 1rem 0rem 2rem;
+}
+   
+.address3 ul {
+   display:flex;
+   display:block;
+   margin-bottom:2rem;
+}
+.address3  a{
+    color:#fff;
+   margin:0.5rem 0rem 1rem -2.5rem;
+    
+    display:block;
+    font-weight:lighter;
+    font-style:inherit;
+}
+.address3 h3{
+    margin: 0.3rem 0rem 1rem -2.5rem;
+font-size: 25px;
+}
+.address33{
+    margin-left:2.5rem;
+}
+
