--- a/ball.css
+++ b/ball.css
@@ -12,7 +12,7 @@ body{
 }
 .box{
     margin:10rem auto;
-    border:20px  double yellow;
+    border:20px  solid yellow;
     width:500px;
     height:200px;
 }
